Configure GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   ],
   "license": "Apache-2.0",
   "scripts": {
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "serve": "gatsby serve",
     "format": "prettier --write 'src/**/*.js'",
